WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
307966
(Regression: Safari 26.x) Underline animation leaves traces (repaint issue)
https://bugs.webkit.org/show_bug.cgi?id=307966
Summary
(Regression: Safari 26.x) Underline animation leaves traces (repaint issue)
Ahmad Saleem
Reported
2026-02-15 20:11:08 PST
Hi Team, While going through article about macOS Tahoe window resize issue on blog, I noticed the bug and now filling here: **** Steps to Reproduce *** 1. Go to
https://noheger.at/blog/about/
2. Hover over `Launch Bar` or `Little Snitch` 3. It animates underline but some time leaves traces *** Actual Results *** It leaves traces, upon resize, it goes away - so repaint issue. *** Expected Result *** It should not leave traces. *** Regression Info *** It does not reproduces on Safari 26.3 but does on Safari Technology Preview 237. *** Other browsers *** Does not reproduce on Chrome Canary 147. Just raising, so we can fix it. Thanks!
Attachments
STP237 - Video - Issue
(7.78 MB, video/quicktime)
2026-02-15 20:12 PST
,
Ahmad Saleem
no flags
Details
Test reduction
(172.50 KB, text/html)
2026-02-16 10:49 PST
,
alan
no flags
Details
[fast-cq]Patch
(3.60 KB, patch)
2026-02-16 18:20 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-02-15 20:11:15 PST
<
rdar://problem/170448325
>
Ahmad Saleem
Comment 2
2026-02-15 20:12:33 PST
Created
attachment 478368
[details]
STP237 - Video - Issue
Ahmad Saleem
Comment 3
2026-02-15 20:13:47 PST
Good news - it is already fixed on WebKit ToT (Minibrowser -
307630@main
).
alan
Comment 4
2026-02-16 10:49:55 PST
Created
attachment 478377
[details]
Test reduction This bug will come back with [subpixel inline layout]. It seems like we under-invalidate the area to repaint when content is on fractional pixel position.
alan
Comment 5
2026-02-16 18:20:03 PST
Created
attachment 478380
[details]
[fast-cq]Patch
EWS
Comment 6
2026-02-17 05:34:08 PST
Committed
307701@main
(a349723e4b51): <
https://commits.webkit.org/307701@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 478380
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug