(Regression: Safari 26.x) Underline animation leaves traces (repaint issue) https://bugs.webkit.org/show_bug.cgi?id=307966 <rdar://problem/170448325>

Reviewed by Simon Fraser.

With no device pixel snapping (and anti-aliasing enabled), anti-aliasing may affect pixels outside the repainted (invalidated) bounds.

Test: fast/repaint/hdpi-box-border-on-transition-paint.html

* LayoutTests/fast/repaint/hdpi-box-border-on-transition-paint-expected.html: Added.
* LayoutTests/fast/repaint/hdpi-box-border-on-transition-paint.html: Added.
* Source/WebCore/rendering/BorderPainter.cpp:
(WebCore::BorderPainter::paintSides const):

Canonical link: https://commits.webkit.org/307701@main